--- a/install_jenkins.yml
+++ b/install_jenkins.yml
@@ -5,18 +5,20 @@
     - name: Install Java Requirements
       apt:
         update_cache: yes
-      when = ansible_distribution == "Ubuntu"
     	name: default-jdk
       become: yes
 
     - name: Install Jenkins
-      shell: |  // start multiline
+      shell: | 
         wget -q -O - https://pkg.jenkins.io/debian/jenkins.io.key | sudo apt-key add -
     	sudo sh -c 'echo deb https://pkg.jenkins.io/debian-stable binary/ > /etc/apt/sources.list.d/jenkins.list'
     	sudo apt update -y
     	sudo apt install jenkins -y
-      when = ansible_distribution == "Ubuntu"
 	  
     - name: Run Jenkins
-      shell: /etc/init.d/jenkins start
+      shell: |
+        sudo systemctl start jenkins
+	sudo systemctl enable jenkins
       become: yes
+     
+
